CKAD/NetworkPolicy/NetworkPolicy.yaml
apiVersion: networking. k8s. io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec :
  podSelector:
    matchLabels: # Selector to apply this policy
     role: db 
  policyTypes :
  - Ingress
  - Egress  
  ingress:
  - from:
     - podSelector:
         matchLabels:
           name: api-pod
       namespaceSelector: # If you wanto to define wich pods and namespace can ingres to this pod
         matchLabels:
           name: prod 
    #  - namespaceSelector: # If you wanto to separate the rules you can add an object to array and this is like a OR operator.
    #      matchLabels:
    #        name: prod 
     - ipBlock:
          cidr: 192.168.10.23/32 
    ports:
    - protocol: TCP
      port: 3306
  egress:
  - to:
     - ipBlock: 
         cidr: 192.168.10.23/32 
    ports:
    - protocol: TCP
      port: 80
